apps/redis/base/redis-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: redis
  labels:
    app: redis
spec:
  serviceName: "redis"
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001 # 추가: 볼륨 그룹 권한도 1001로 맞춤

      # [1] 초기화 컨테이너 추가: /data 폴더의 주인을 1001번으로 변경
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
              name: redis

          volumeMounts:
            - name: redis-data
              mountPath: /data

          securityContext:
            allowPrivilegeEscalation: false

  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 8Gi
